<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/defaultBackgroundColor">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo_rikai" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/bg_white_top_corner_15dp"
            android:ellipsize="end"
            android:hint="email"
            android:imeOptions="actionNext"
            android:inputType="text|textEmailAddress"
            android:lines="1"
            android:maxLength="64"
            android:paddingHorizontal="30dp"
            android:textColor="@color/blue_light"
            android:textColorHint="@color/gray_chalice"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline" />

        <!--<com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtPasswordLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@+id/edtEmail"
            app:layout_constraintStart_toStartOf="@+id/edtEmail"
            app:layout_constraintTop_toBottomOf="@+id/guideline"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/custom_password_eye"
            app:passwordToggleTint="@color/blue_light">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/bg_white_bottom_corner_15dp"
                android:ellipsize="end"
                android:hint="password"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLength="64"
                android:paddingHorizontal="30dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_chalice"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>-->

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtPassword"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:background="@drawable/bg_white_bottom_corner_15dp"
            android:ellipsize="end"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLength="64"
            android:paddingHorizontal="30dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray_chalice"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/edtEmail"
            app:layout_constraintStart_toStartOf="@+id/edtEmail"
            app:layout_constraintTop_toBottomOf="@+id/guideline" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_30"
            android:backgroundTint="@color/blue_light"
            android:text="@string/login"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtPassword" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/sign_up"
            android:textColor="@color/blue_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>